default startup commands start at level 99

--- a/config.json
+++ b/config.json
@@ -13,7 +13,9 @@
 						"slot_id": "1",
 						"node_type":"controller",
 						"default_commands": [	
-							"# echo magic123 | sudo -S service opensafd start"
+							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
+							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
+							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &"
 						]
 					},
 					{
@@ -27,7 +29,9 @@
 						"slot_id": "2",
 						"node_type":"controller",
 						"default_commands": [	
-							"# echo magic123 | sudo -S service opensafd start"
+							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
+							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
+							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &"
 						]
 					},
 					{
@@ -41,7 +45,9 @@
 						"slot_id": "3",
 						"node_type":"payload",
 						"default_commands": [	
-							"# echo magic123 | sudo -S service opensafd start"
+							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
+							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
+							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &"
 						]
 					},
 					{
@@ -55,7 +61,9 @@
 						"slot_id": "4",
 						"node_type":"payload",
 						"default_commands": [	
-							"# echo magic123 | sudo -S service opensafd start"
+							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
+							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
+							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &"
 						]
 					}
 				]
