added opensaf start

--- a/config.json
+++ b/config.json
@@ -31,7 +31,8 @@
 						"default_commands": [	
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
-							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &"
+							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
+							"echo magic123 | sudo -S service opensafd start"
 						]
 					},
 					{
@@ -47,7 +48,8 @@
 						"default_commands": [	
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
-							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &"
+							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
+							"echo magic123 | sudo -S service opensafd start"
 						]
 					},
 					{
@@ -63,7 +65,8 @@
 						"default_commands": [	
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
-							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &"
+							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
+							"echo magic123 | sudo -S service opensafd start"
 						]
 					}
 				]
