added some delay to start default services

--- a/config.json
+++ b/config.json
@@ -12,7 +12,8 @@
 						"flavor":"2",
 						"slot_id": "1",
 						"node_type":"controller",
-						"default_commands": [	
+						"default_commands": [
+							"sleep 2",
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
@@ -29,7 +30,8 @@
 						"flavor":"2",
 						"slot_id": "2",
 						"node_type":"controller",
-						"default_commands": [	
+						"default_commands": [
+							"sleep 2",
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
@@ -46,7 +48,8 @@
 						"flavor":"2",
 						"slot_id": "3",
 						"node_type":"payload",
-						"default_commands": [	
+						"default_commands": [
+							"sleep 2",
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
@@ -63,7 +66,8 @@
 						"flavor":"2",
 						"slot_id": "4",
 						"node_type":"payload",
-						"default_commands": [	
+						"default_commands": [
+							"sleep 2",
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
