--- a/config.json
+++ b/config.json
@@ -16,6 +16,7 @@
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
+							"sleep 3",
 							"echo magic123 | sudo -S service opensafd start"
 						]
 					},
@@ -33,6 +34,7 @@
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
+							"sleep 3",
 							"echo magic123 | sudo -S service opensafd start"
 						]
 					},
@@ -50,6 +52,7 @@
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
+							"sleep 3",
 							"echo magic123 | sudo -S service opensafd start"
 						]
 					},
@@ -67,6 +70,7 @@
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
 							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
+							"sleep 3",
 							"echo magic123 | sudo -S service opensafd start"
 						]
 					}
