--- a/config.json
+++ b/config.json
@@ -14,9 +14,9 @@
 						"node_type":"controller",
 						"default_commands": [
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
-							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
-							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
-							"echo magic123 | sudo -S service opensafd start"
+							"python3 -m lttngAnalyses.destroy_and_clean",
+							"python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
+							"service opensafd start"
 						]
 					},
 					{
@@ -31,9 +31,9 @@
 						"node_type":"controller",
 						"default_commands": [
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
-							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
-							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
-							"echo magic123 | sudo -S service opensafd start"
+							"python3 -m lttngAnalyses.destroy_and_clean",
+							"python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
+							"service opensafd start"
 						]
 					},
 					{
@@ -48,9 +48,9 @@
 						"node_type":"payload",
 						"default_commands": [
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
-							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
-							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
-							"echo magic123 | sudo -S service opensafd start"
+							"python3 -m lttngAnalyses.destroy_and_clean",
+							"python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
+							"service opensafd start"
 						]
 					},
 					{
@@ -65,9 +65,9 @@
 						"node_type":"payload",
 						"default_commands": [
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
-							"echo magic123 | sudo -S python3 -m lttngAnalyses.destroy_and_clean",
-							"echo magic123 | sudo -S python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
-							"echo magic123 | sudo -S service opensafd start"
+							"python3 -m lttngAnalyses.destroy_and_clean",
+							"python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
+							"service opensafd start"
 						]
 					}
 				]
