--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"python3 -m lttngAnalyses.destroy_and_clean",
 							"python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
-							"service opensafd start"
+							"echo magic123 | sudo -S service opensafd start"
 						]
 					},
 					{
@@ -33,7 +33,7 @@
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"python3 -m lttngAnalyses.destroy_and_clean",
 							"python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
-							"service opensafd start"
+							"echo magic123 | sudo -S service opensafd start"
 						]
 					},
 					{
@@ -50,7 +50,7 @@
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"python3 -m lttngAnalyses.destroy_and_clean",
 							"python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
-							"service opensafd start"
+							"echo magic123 | sudo -S service opensafd start"
 						]
 					},
 					{
@@ -67,7 +67,7 @@
 							"cd /home/node1/Downloads/lttngAnalysesForOpenSAF/",
 							"python3 -m lttngAnalyses.destroy_and_clean",
 							"python3 -m lttngAnalyses.daemon_controller_client 192.168.10.7 6666 &",
-							"service opensafd start"
+							"echo magic123 | sudo -S service opensafd start"
 						]
 					}
 				]
